--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
+<h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
+<p th:text="${voted}"></p>
     <h1>Select Cat</h1>
+
     <div>
         <table class="table table-striped table-responsive-md">
             <thead>
@@ -21,9 +24,10 @@
             </thead>
             <tbody>
                 <tr>
-                    <td >
+                    <td>
                         <!--/*@thymesVar id="cat" type="com.example.demo.entities.Cat"*/-->
-                        <form th:object="${firstCat}" method="post">
+                        <form  th:object="${firstCat}" method="post">
+                            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
                             <button type="submit" name="submit" value="value" class="link-button">
                                 <input type="hidden" th:name="cid" th:value="${firstCat.getId()}"/>
                                 <img th:src="${firstCat.getPath()}"   width="255" height="255" />
@@ -33,6 +37,8 @@
                     </td>
                     <td > <!--/*@thymesVar id="secondCat" type="com.example.demo.entities.Cat"*/-->
                         <form th:object="${secondCat}" method="post">
+                            <input type="hidden" name="${_csrf.parameterName}"
+                                   value="${_csrf.token}" />
                             <button type="submit" name="submit" value="value" class="link-button">
                                 <input type="hidden" th:name="cid" th:value="${secondCat.getId()}"/>
                                 <img th:src="${secondCat.getPath()}"   width="255" height="255" />
