--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -12,6 +12,11 @@
 <body>
 <h1>result Cats</h1>
 <div>
+  <a href="javascript: document.logoutForm.submit()" role="menuitem"> Logout</a>
+
+  <form name="logoutForm" th:action="@{/logout}" method="post" th:hidden="true">
+    <input hidden type="submit" value="Sign Out"/>
+  </form>
   <table class="table table-striped table-responsive-md">
     <thead>
     <tr>
