update file login.html add elements for production

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Login1</h1>
+
 <div th:if="${param.error}">
   Invalid username and password.
 </div>
@@ -36,5 +36,15 @@
   </table>
 </form>
 <p th:if="${param.error}">Login failed!</p>
+
+<p>User: user1  Password: password1</p>
+<p>User: user2  Password: password2</p>
+<p>User: user3  Password: password3</p>
+<p>User: user4  Password: password4</p>
+<p>User: user5  Password: password5</p>
+<p>User: user6  Password: password6</p>
+<p>User: user7  Password: password7</p>
+<p>User: user8  Password: password8</p>
+<p>User: user9  Password: password9</p>
 </body>
 </html>
